# agentic-webrenewal

./: .env.example  .gitignore  README.md  pyproject.toml  renewal.py  requirements.txt
agents/a0-tool-discovery/: README.md  __init__.py  agent_a0.py
agents/a1-scope-seed/: README.md
agents/a10-plan-proposal/: README.md
agents/a11-rewrite/: README.md
agents/a12-theming/: README.md
agents/a13-builder/: README.md
agents/a14-comparator/: README.md
agents/a15-offer/: README.md
agents/a16-memory/: README.md
agents/a2-crawler/: README.md
agents/a3-readability/: README.md
agents/a4-tech-fingerprint/: README.md
agents/a5-accessibility-a11y/: README.md
agents/a6-seo/: README.md
agents/a7-security/: README.md
agents/a8-media/: README.md
agents/a9-navigation/: README.md
agents/common/: __init__.py  logger.py  paths.py  schemas.py
app/: __init__.py  main.py
app/static/: widget.js
app/templates/: embed_chat.html
configs/: pipeline.json  sources.mcp.yaml
examples/: embed.html
scripts/: run_a0.py
src/: widget.ts
tests/: conftest.py  test_rewrite_agent.py
tests/integration/: test_pipeline_integration.py  test_postedit_flows.py
tests/unit/: test_config.py  test_delta_planner.py  test_head_agent.py  test_http.py  test_llm.py  test_logging_config.py  test_mcp_server.py  test_models.py  test_pipeline.py  test_pipeline_modes.py  test_postedit_pipeline.py  test_state_store.py  test_storage.py  test_tracing.py  (+2 more)
webrenewal/: __init__.py  config.py  delta.py  http.py  logging_config.py  models.py  pipeline.py  state.py  storage.py  tracing.py
(+95 files in other folders)
