[project]
name = "agentic-webrenewal"
version = "0.1.0"
description = "Agentic pipeline for website renewal PoC"
authors = [{ name = "Agentic Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.12.3",
    "jinja2==3.1.4",
    "lxml==5.1.0",
    "requests==2.32.3",
    "textstat==0.7.4",
    "trafilatura==1.8.1",
]

[project.scripts]
renewal = "renewal:main"
