[project]
name = "agentic-webrenewal"
version = "0.1.0"
description = "Agentic pipeline for website renewal PoC"
authors = [{ name = "Agentic Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.12.3",
    "jinja2==3.1.4",
    "lxml==5.1.0",
    "requests==2.32.3",
    "textstat==0.7.4",
    "trafilatura==1.8.1",
    "openai>=1.51.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "anthropic>=0.34.0",
]

[project.scripts]
renewal = "renewal:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "asyncio: Tests, die eine asyncio-Eventloop benötigen",
]
